update de linkkks de videos

--- a/conteudos/linha-de-comando/12-rm.md
+++ b/conteudos/linha-de-comando/12-rm.md
@@ -1,4 +1,9 @@
-# rm
+---
+title: "rm"
+youtube: "https://youtu.be/7Zl1yXe-MB8?si=z3e2hWzT506BXN_l"
+---
+
+
 
 Agora acho que temos muitos arquivos, vamos remover alguns arquivos. Para remover arquivos você pode usar o comando rm. O comando rm (remove) é usado para excluir arquivos e diretórios.
 
@@ -45,3 +50,11 @@ $ rm -rf /home/bruno/backup/
 ```
 
 Isso evita o erro de usar o comando rm * pensando estar dentro da pasta backup quando na verdade estava dentro de outra pasta. Lembre-se o terminal não tem lixeira!
+
+
+---
+
+## 📺 Vídeo relacionado
+
+{{< video-youtube >}}
+
