--- a/conteudos/arte-do-texto/12-tr.md
+++ b/conteudos/arte-do-texto/12-tr.md
@@ -1,3 +1,8 @@
+---
+title: "Comando tr"
+youtube:
+---
+
 **Comandos de Tradução**
 
 O comando `tr` permite que você traduza um conjunto de caracteres em outro conjunto de caracteres. Vamos tentar um exemplo de traduzir todos os caracteres minusculos em maiúsculos.
