--- a/conteudos/linha-de-comando/12-rm.md
+++ b/conteudos/linha-de-comando/12-rm.md
@@ -5,7 +5,7 @@ youtube: "https://youtu.be/7Zl1yXe-MB8?si=z3e2hWzT506BXN_l"
 
 
 
-Agora acho que temos muitos arquivos, vamos remover alguns arquivos. Para remover arquivos você pode usar o comando rm. O comando rm (remove) é usado para excluir arquivos e diretórios.
+Para remover arquivos você pode usar o comando rm. O comando rm (remove) é usado para excluir arquivos e diretórios.
 
 
 ```bash
